--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /**
  * Theme Name:  twpol
  * Theme URI:   http://james-oldfield.co
- * Description: Custom theme for IA
+ * Description: Custom theme
  * Author:      James Oldfield
  * Author URI:  http://james-oldfield.co
  * Version:     0.1.0
