--- a/assets/css/twpol.css
+++ b/assets/css/twpol.css
@@ -26,6 +26,7 @@
   background: #1a1a1a; }
 
 body {
+  text-transform: uppercase;
   font-family: "Mohave", sans-serif !important;
   background: #fff;
   margin-top: -20px;
@@ -33,8 +34,9 @@ body {
 
 .header {
   border-bottom: solid 3px #1a1a1a;
-  background: url(../../images/girlBackground.jpg) top;
-  background-size: auto 100%;
+  background: url(../../images/girlBackground.jpg);
+  background-position: top;
+  background-size: cover;
   padding: 75px 20px !important; }
   .header h2 {
     font-family: 'Mohave Italics', sans-serif;
