--- a/assets/css/twpol.css
+++ b/assets/css/twpol.css
@@ -34,7 +34,7 @@ body {
 
 .header {
   border-bottom: solid 3px #1a1a1a;
-  background: url(../../images/girlBackground.jpg);
+  background: url(../../images/girlBackground.jpg) cover no-repeat fixed;
   background-position: 0 0;
   background-size: cover;
   padding: 75px 20px !important; }
