--- a/assets/css/twpol.css
+++ b/assets/css/twpol.css
@@ -33,8 +33,10 @@ body {
   word-wrap: break-word !important; }
 
 .header {
+  background: url(../../images/girlBackground.jpg) cover no-repeat fixed #1a1a1a;
+  background-position: 0 0;
+  background-size: cover;
   border-bottom: solid 3px #1a1a1a;
-  background: #1a1a1a;
   padding: 75px 20px !important; }
   .header h2 {
     font-family: 'Mohave Italics', sans-serif;
@@ -111,7 +113,7 @@ input.signUp {
       color: #1a1a1a; }
 
 .twpolBody {
-  background: url(../../images/girlBackground.jpg) center fixed no-repeat;
+  background: url(../../images/girlBackground.jpg) center fixed no-repeat #1a1a1a;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -217,14 +219,10 @@ input.signUp {
     position: absolute;
     width: 100%; }
 
-  .header {
-    background: url(../../images/girlBackground.jpg) cover no-repeat fixed;
-    background-position: 0 0;
-    background-size: cover; }
-    .header h3 a {
-      color: #1a1a1a; }
-    .header #countdown {
-      color: #1a1a1a; }
+  .header h3 a {
+    color: #1a1a1a; }
+  .header #countdown {
+    color: #1a1a1a; }
 
   .main .title p {
     font-size: 18px;
