background image change

--- a/assets/css/sass/twpol.scss
+++ b/assets/css/sass/twpol.scss
@@ -1,5 +1,5 @@
 /**
- * inArchives
+ * twpol
  * http://james-oldfield.co
  *
  * Copyright (c) 2015 James Oldfield
@@ -30,7 +30,7 @@ body {
 }
 
 .header {
-	background: url(../../images/girlBackground.jpg) cover no-repeat fixed $myBlack;
+	background: url(../../images/background.jpg) cover no-repeat fixed $myBlack;
 	background-position: 0 0;
 	background-size: cover;
 	border-bottom: solid 3px $myBlack;
