--- a/assets/css/twpol.css
+++ b/assets/css/twpol.css
@@ -33,9 +33,8 @@ body {
   word-wrap: break-word !important; }
 
 .header {
-  background: url(../../images/background.jpg) cover no-repeat fixed #1a1a1a;
+  background: url(../../images/background.jpg) cover no-repeat fixed;
   background-position: 0 0;
-  background-size: cover;
   border-bottom: solid 3px #1a1a1a;
   padding: 75px 20px !important; }
   .header h2 {
@@ -226,7 +225,7 @@ input.signUp {
 
   .main .title p {
     font-size: 18px;
-    font-size: 1vw; }
+    font-size: 0.8vw; }
 
   .twpol {
     padding: 50px 150px; }
